2007-07-09  Scroll  <scroll@localhost.localdomain>

	* Command line arguments are parsed again, using optparse;
	wxMAC-specific fixes for frame positioning; added more component
	icons generated from screenshots; configuration saving restored;
	"push pin" button for sticky attribute panel page. Bugs to be
	fixed: PyDeadObjectError is exiting with not the first attribute
	page selected.

2007-07-06  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* Use GridBagSizer for tool placement, with automatic position
	checking and generation of default positions; maketools script can
	now generate PNG files for most controls from tools.xrc on wxGTK.

2007-07-05  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* Moved deprecated xrced.py,panel.py,tree.py and xxx.py to attic/,
	test.py renamed to xrced.py.

	* Added new bitmaps for tool panel. Using BMP format. Files
	related to core componetns are in plugins/bitmaps, while toolbook
	tab bitmaps are in the old src-images. Will think about better
	directory structure. Implemented new tool panel using
	Toolbook. Trying to generate tool images automatically by
	misc/maketools.py script. New experimental feature is being
	tested: components plugins defined as XML resources.

	* Undo/redo fixes, using UndoGlobal as a temporaty solution for
	non-implemented undos; added maketools script for auto-generating
	tool panel bitmaps; reusing old tool panel in tools.py at the
	moment until the new one is ready

2007-07-03  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* Some undo/redo refactoring. This are messy at the moment but it
	is already working for simple actions (Delete, Panel edit if not
	followed by selecting other items).

2007-07-03  Scroll  <scroll@localhost.localdomain>

	* Improved XML indenting, added new "View>Show XML" command.

2007-07-01  Scroll  <scroll@localhost.localdomain>

	* 'name' parameter in Component was confusion, renamed to 'klass';
	style/exstyle granted separate notebook panels with checkboxes