@@ -15,14 +15,20 @@ TRACE('*** creating meta components')
 
 c = SimpleComponent(
     'Component', ['component'],
-    ['groups', 'attributes', 'styles', 'has-name',
+    ['provider', 'version', 'url',
+     'groups', 'attributes', 'styles', 'has-name',
      'DL', 'module', 'handler',
      'menu', 'label', 'help', 'index',
      'panel', 'icon', 'pos', 'span'],
-    specials={'groups': ContentAttribute,
+    specials={'provider': AttributeAttribute,
+              'version': AttributeAttribute,
+              'url': AttributeAttribute,
+              'groups': ContentAttribute,
               'attributes': ContentAttribute,
               'styles': ContentAttribute},
-    params={'groups': params.ParamContent,
+    params={'provider': params.ParamLongText,
+            'url': params.ParamLongText,
+            'groups': params.ParamContent,
             'attributes': params.ParamContent,
             'styles': params.ParamContent,
             'icon': params.ParamImage,
